# simple-svg

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main_1.0.0.cpp  simple_svg_1.0.0.hpp
.git-hooks/: pre-commit
test/: Makefile  simple_svg_test.cpp
tests/: simple_svg_test.cpp
